[gd_scene load_steps=12 format=3 uid="uid://b3x5mugdjoywk"]

[ext_resource type="Texture2D" uid="uid://cp1wligixig3a" path="res://resource/assets/ui/star.png" id="1_0rcug"]
[ext_resource type="Script" path="res://shared/scripts/score_screen.gd" id="1_vgj1b"]
[ext_resource type="Texture2D" uid="uid://brjjjywoc1gv5" path="res://resource/assets/backgrounds/pergamino.png" id="2_h6fo2"]
[ext_resource type="Texture2D" uid="uid://tqdav0jmx6ws" path="res://resource/assets/object/coin_gold.png" id="3_5c15y"]
[ext_resource type="Theme" uid="uid://ccdfqfq2wd0rn" path="res://resource/themes/button_theme.tres" id="4_l6kek"]
[ext_resource type="Texture2D" uid="uid://tibn6dnhd1ba" path="res://resource/assets/ui/continue.png" id="5_hjddo"]
[ext_resource type="Texture2D" uid="uid://bbk66nmvwe3qk" path="res://resource/assets/ui/home.png" id="6_ar0n0"]
[ext_resource type="Texture2D" uid="uid://bw4o21buwm0yg" path="res://resource/assets/ui/restart.png" id="7_qlgj7"]

[sub_resource type="Animation" id="Animation_jk3ar"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cknmu"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7heg"]
_data = {
"RESET": SubResource("Animation_jk3ar"),
"move": SubResource("Animation_cknmu")
}

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 101.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_vgj1b")
metadata/_edit_vertical_guides_ = [100.0, 1052.0, 577.0, 430.0, 724.0, 597.0]
metadata/_edit_horizontal_guides_ = [100.0, 550.0, 195.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -367.0
offset_top = -124.0
offset_right = 368.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_h6fo2")
expand_mode = 2

[node name="Title1" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -193.5
offset_right = 193.5
offset_bottom = 82.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.972549, 0.988235, 0, 1)
theme_override_colors/font_outline_color = Color(0.454902, 0.462745, 0, 1)
theme_override_constants/outline_size = 17
theme_override_font_sizes/font_size = 32
text = "ACTIVIDAD COMPLETADA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -193.5
offset_right = 193.5
offset_bottom = 82.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.670588, 0.670588, 0.670588, 1)
theme_override_colors/font_outline_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_constants/outline_size = 17
theme_override_font_sizes/font_size = 32
text = "ACTIVIDAD FALLIDA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -102.5
offset_top = -4.0
offset_right = 104.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -36.0
offset_right = 93.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "ACIERTOS:"

[node name="Complete" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "100%"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "TIEMPO:"

[node name="Time" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "000"

[node name="Sprite2D" type="Sprite2D" parent="Control"]
position = Vector2(77, 101)
scale = Vector2(2, 2)
texture = ExtResource("3_5c15y")
hframes = 8

[node name="Control" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label2" type="Label" parent="Control/Control"]
layout_mode = 2
offset_left = 96.0
offset_top = 83.0
offset_right = 110.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "+"

[node name="MoneyLabel" type="Label" parent="Control/Control"]
layout_mode = 2
offset_left = 115.0
offset_top = 83.0
offset_right = 143.0
offset_bottom = 117.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 24
text = "00"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Control"]
libraries = {
"": SubResource("AnimationLibrary_a7heg")
}
autoplay = "move"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.628
anchor_top = 0.943
anchor_right = 0.628
anchor_bottom = 0.943
offset_left = -25.228
offset_top = -27.464
offset_right = 24.772
offset_bottom = 27.536
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_l6kek")
icon = ExtResource("5_hjddo")

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.943
anchor_right = 0.5
anchor_bottom = 0.943
offset_left = -24.5
offset_top = -27.464
offset_right = 25.5
offset_bottom = 27.536
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_l6kek")
icon = ExtResource("6_ar0n0")

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.374
anchor_top = 0.943
anchor_right = 0.374
anchor_bottom = 0.943
offset_left = -26.674
offset_top = -27.464
offset_right = 23.326
offset_bottom = 27.536
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_l6kek")
icon = ExtResource("7_qlgj7")
icon_alignment = 1

[node name="Stars" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -84.0
offset_right = 127.5
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start1" type="Sprite2D" parent="Stars"]
scale = Vector2(2, 2)
texture = ExtResource("1_0rcug")
hframes = 2
frame = 1

[node name="Start2" type="Sprite2D" parent="Stars"]
position = Vector2(146, 0)
scale = Vector2(2, 2)
texture = ExtResource("1_0rcug")
hframes = 2
frame = 1

[node name="Start3" type="Sprite2D" parent="Stars"]
position = Vector2(294, -1)
scale = Vector2(2, 2)
texture = ExtResource("1_0rcug")
hframes = 2
frame = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
